Bug 351812 - The availability of undoing the last move after end of game is inconsistent
Summary: The availability of undoing the last move after end of game is inconsistent
Status: RESOLVED FIXED
Alias: None
Product: kreversi
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.1.22042
Platform: Gentoo Packages Linux
: NOR minor
Target Milestone: ---
Assignee: Inge Wallin
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-08-26 17:09 UTC by Martin Walch
Modified: 2025-05-13 22:32 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Martin Walch 2015-08-26 17:09:09 UTC
It is not possible to undo the last move after end of game if AI would have done the next turn (button is grey). If a human player would have come next, then it is possible.

I guess undoing should be possible in both cases?
Comment 1 Justin Zobel 2022-10-14 05:46:50 UTC
Thank you for reporting this bug in KDE software. As it has been a while since this issue was reported and confirmed, can we please ask you to see if you can reproduce the issue with a recent software version?

If you can reproduce the issue, please change the status to "CONFIRMED" when replying. Thank you!
Comment 2 Martin Walch 2022-10-18 21:06:55 UTC
Still there in 2.1.22043 (version missing in the drop-down of this bug tracker).
Comment 3 Bug Janitor Service 2025-05-11 15:49:28 UTC
A possibly relevant merge request was started @ https://invent.kde.org/games/kreversi/-/merge_requests/30
Comment 4 Juriën Huisman 2025-05-13 22:31:16 UTC
Git commit 3d2c0bcc13d37889a7cc47797bab0a3a646d8615 by Juriën Huisman.
Committed on 11/05/2025 at 15:49.
Pushed by aacid into branch 'master'.

Fix inconsistent availability of undoing after end of game.

Use `true` instead of `m_game->canUndo()` because the player should always be able to undo after a game over.

M  +1    -1    src/mainwindow.cpp

https://invent.kde.org/games/kreversi/-/commit/3d2c0bcc13d37889a7cc47797bab0a3a646d8615
Comment 5 Albert Astals Cid 2025-05-13 22:32:25 UTC
Git commit 08c2a7e1e93d5015d590e82a1888c82e83a36660 by Albert Astals Cid, on behalf of Juriën Huisman.
Committed on 13/05/2025 at 22:32.
Pushed by aacid into branch 'release/25.04'.

Fix inconsistent availability of undoing after end of game.

Use `true` instead of `m_game->canUndo()` because the player should always be able to undo after a game over.
(cherry picked from commit 3d2c0bcc13d37889a7cc47797bab0a3a646d8615)

M  +1    -1    src/mainwindow.cpp

https://invent.kde.org/games/kreversi/-/commit/08c2a7e1e93d5015d590e82a1888c82e83a36660