Fix inconsistent availability of undoing after end of game.

Use `true` instead of `m_game->canUndo()` because the player should always be able to undo after a game over.

BUG: 351812
(cherry picked from commit 3d2c0bcc13d37889a7cc47797bab0a3a646d8615)